--- a/WindowsFormsApp1/Views/DodajPrzystanekDoTrasy.resx
+++ b/WindowsFormsApp1/Views/DodajPrzystanekDoTrasy.resx
@@ -638,4 +638,7 @@
         Bgw8vtDldqujOiQQERFR58mFLoCIiIiKE0MCERERBfr/+YJs0HdsmUUAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="errorProvider2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>147, 17</value>
+  </metadata>
 </root>
