--- a/WindowsFormsApp1/Views/DodawanieDniWolnych.resx
+++ b/WindowsFormsApp1/Views/DodawanieDniWolnych.resx
@@ -567,6 +567,9 @@
         JRsAAPho2Uuyn2RPyb6SvcVbttv+7//9/wG9blp1X/NsPQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="errorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAAAAAAAEAIAAfeAAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAIJAAACDAgGAAAAf68/SwAAIABJ
