--- a/WindowsFormsApp1/Views/ZmianaStatusu.resx
+++ b/WindowsFormsApp1/Views/ZmianaStatusu.resx
@@ -1581,6 +1581,9 @@
         XoooAPL9/wBP/r0eX7/p/wDXoooAPL9/0/8Ar0eX7/p/9eiigBQmCDnoc9P/AK9FFFAH/9k=
 </value>
   </data>
+  <metadata name="errorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAAAAAAAEAIAAfeAAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAIJAAACDAgGAAAAf68/SwAAIABJ
